--- a/shoes-diy/style.css
+++ b/shoes-diy/style.css
@@ -102,8 +102,8 @@ a:hover { color: #0ae }
 .menuBox ul { margin-top: 46px; border-radius: 15px 0 0 15px; padding:40px 0; background: #eee; }
 .menuBox li {height: 80px; line-height:80px; cursor: pointer;}
 .menuBox li.cur{ background:#fff;}
-
-
+/*遮罩层*/
+#loading{ width:100%; height:100%;opacity:.2; position:absolute; left:0; top:0; z-index:100; background:#000 url(images/loading.gif) no-repeat center center;}
 
 
 
